Made a more thorough comment to django template code for poplulating metrics tool dropdown. Added overflow to metrics body for long lists. Added animation test for dropdown to ensure it's not displayed behind another exp row.

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -408,6 +408,7 @@ div.product-instructions .glyphicon{
           .trayTableHeader {
             background: #333;
             color: #fff;
+            height: 40px;
             padding: 10px 2%;
           }
 
@@ -417,6 +418,8 @@ div.product-instructions .glyphicon{
 
           .trayTableBody {
             padding: 18px 2%;
+            max-height: 410px;
+            overflow: auto;
           }
 
           .trayTableBody li {
